--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: qmi-gps-proxy
 Section: utils
 Priority: optional
 Maintainer: Nicolas Dechesne <nicolas.dechesne@linaro.org>
-Build-Depends: cdbs, debhelper (>= 7), qmic, libqrtr-dev
+Build-Depends: cdbs, debhelper (>= 7), qmic, libqrtr-dev, quilt
 Standards-Version: 3.9.3
 Homepage: https://git.linaro.org/landing-teams/working/qualcomm/pkg/qmi_loc2.git
 Vcs-Git: https://git.linaro.org/landing-teams/working/qualcomm/pkg/qmi_loc2.git
