gnss-gpsd: new package to link GNSS and GPSD
Make sure that ttyGPS0 device is registered into running instance of GPSD.

Signed-off-by: Nicolas Dechesne <nicolas.dechesne@linaro.org>

--- a/debian/control
+++ b/debian/control
@@ -15,3 +15,8 @@ Depends:
  ${misc:Depends},
  qdsp-start,
 Description: QCOM GPS proxy daemon.
+
+Package: gnss-gpsd
+Architecture: all
+Depends: gpsd
+Description: QCOM GPS integration to GPSD
