debian: make sure gnss-gpsd depends on qmi gps proxy
Signed-off-by: Nicolas Dechesne <nicolas.dechesne@linaro.org>

--- a/debian/control
+++ b/debian/control
@@ -18,5 +18,5 @@ Description: QCOM GPS proxy daemon.
 
 Package: gnss-gpsd
 Architecture: all
-Depends: gpsd
+Depends: gpsd, qmi-gps-proxy (= ${binary:Version})
 Description: QCOM GPS integration to GPSD
