debian: fix service dependencies
qmi-gps-proxy is supposed to be a dependency of gnss-gpsd, but it was missing
the Wants directive, and instead we had an extra udev rules.. Not sure why/how
we ended up with such a config, but the right thing to do is to have 1 udev rule
that triggers gnss-gpsd service, and make sure the dependency between gnss-gpsd
and qmi-gps-proxy is configured properly with Wants directive.

Signed-off-by: Nicolas Dechesne <nicolas.dechesne@linaro.org>

--- a/debian/gnss-gpsd.service
+++ b/debian/gnss-gpsd.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Register QCOM GPS into GPSD
 After=systemd-remount-fs.service qmi-gps-proxy.service
+Wants=qmi-gps-proxy.service
 
 [Service]
 Type=oneshot
