--- a/debian/control
+++ b/debian/control
@@ -2,18 +2,17 @@ Source: qmi-gps-proxy
 Section: utils
 Priority: optional
 Maintainer: Nicolas Dechesne <nicolas.dechesne@linaro.org>
-Build-Depends: cdbs, debhelper (>= 7), qmic, libqrtr-dev, quilt
-Standards-Version: 3.9.3
+Build-Depends: cdbs, debhelper (>= 11), qmic, libqrtr-dev, quilt
+Standards-Version: 4.1.1
 Homepage: https://git.linaro.org/landing-teams/working/qualcomm/pkg/qmi_loc2.git
-Vcs-Git: https://git.linaro.org/landing-teams/working/qualcomm/pkg/qmi_loc2.git
-Vcs-Browser: https://git.linaro.org/landing-teams/working/qualcomm/pkg/qmi_loc2.git
+Vcs-Git: git://github.com/debian-pm/qmi_loc2-packaging.git
+Vcs-Browser: https://github.com/debian-pm/qmi_loc2-packaging
 
 Package: qmi-gps-proxy
 Architecture: any
-Depends:
- ${shlibs:Depends},
- ${misc:Depends},
- qdsp-start,
+Depends: ${shlibs:Depends},
+                  ${misc:Depends},
+                  qdsp-start,
 Description: QCOM GPS proxy daemon.
 
 Package: gnss-gpsd
